--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,7 @@ nav {
 }
 
 #search_btn {
-  background-color: #febd69;
+  background-color:#2A994A;
 }
 
 .input-group {
@@ -47,7 +47,7 @@ nav {
 
 #login_btn,
 #view_btn {
-  background-color: #febd69;
+  background-color: #2A994A;
   padding: 0.4rem 1.8rem;
   font-family: calibri;
 }
@@ -58,7 +58,7 @@ nav {
 }
 
 #cart_count {
-  background-color: #febd69;
+  background-color: #2A994A;
   padding: 0.2rem 0.5rem;
   border-radius: 0.2rem;
   color: black;
@@ -80,7 +80,7 @@ nav {
 }
 
 .card-title a:hover {
-  color: #fa9c23;
+  color: #2A994A;
   text-decoration: none;
 }
 
@@ -93,7 +93,7 @@ nav {
 }
 
 #view_btn {
-  background-color: #fa9c23;
+  background-color: #2A994A;
   color: white;
 }
 
@@ -162,7 +162,7 @@ footer {
 #cart_btn,
 #review_btn {
   border-radius: 2rem;
-  background-color: #fa9c23;
+  background-color: #2A994A;
   border: none;
   padding: 0.5rem 2rem;
 }
@@ -207,8 +207,8 @@ footer {
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #fa9c23;
-  border-color: #fa9c23 transparent;
+  border: 6px solid #2A994A;
+  border-color: #2A994A transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 @keyframes lds-dual-ring {
@@ -240,22 +240,22 @@ footer {
 }
 
 #card_item_price {
-  color: #febd69;
+  color: #2A994A;
   font-weight: bold;
   font-size: 1.4rem;
 }
 
 #checkout_btn,
 .review-btn {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: #2A994A;
+  border-color: #2A994A;
   margin-top: 2rem;
   border-radius: 5rem;
 }
 
 #view_order_details {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: #2A994A;
+  border-color: #2A994A;
 }
 
 #order_summary {
@@ -307,8 +307,8 @@ footer {
 }
 
 .wrapper form .btn {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: #2A994A;
+  border-color: #2A994A;
   color: white;
   margin-top: 2.5rem;
 }
@@ -387,7 +387,7 @@ footer {
 }
 
 .active-step {
-  background: #fa9c23;
+  background: #2A994A;
   color: #fff;
 }
 
@@ -395,7 +395,7 @@ footer {
   float: left;
   width: 0;
   border-top: 20px solid transparent;
-  border-left: 15px solid #fa9c23;
+  border-left: 15px solid #2A994A;
   border-bottom: 20px solid transparent;
   margin-left: -1px;
 }
@@ -403,9 +403,9 @@ footer {
 .triangle2-active {
   width: 0;
   float: left;
-  border-top: 20px solid #fa9c23;
+  border-top: 20px solid #2A994A;
   border-left: 15px solid #fff;
-  border-bottom: 20px solid #fa9c23;
+  border-bottom: 20px solid #2A994A;
   margin-right: -1px;
 }
 
@@ -445,8 +445,8 @@ footer {
 }
 
 #edit_profile {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: #2A994A;
+  border-color: #2A994A;
 }
 
 /* Confirm Order */
@@ -457,8 +457,8 @@ footer {
 }
 
 .update-btn {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: #2A994A;
+  border-color: #2A994A;
   color: white;
 }
 
@@ -468,16 +468,16 @@ footer {
 
 /* Pagination */
 .page-item.active .page-link {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: #2A994A;
+  border-color: #2A994A;
 }
 
 .page-link {
-  color: #fa9c23;
+  color: #2A994A;
 }
 
 .page-link:hover {
-  color: #fa9c23;
+  color: #2A994A;
 }
 
 /* Admin Sidebar */
@@ -603,7 +603,7 @@ ul.CTAs a {
 }
 
 .orange {
-  color: #fa9c23;
+  color: #2A994A;
 }
 
 .yellow {
